Added geographic centroids for Mountain Area RAC Counties

--- a/County-TraumaCtrBloodMap.ipynb
+++ b/County-TraumaCtrBloodMap.ipynb
@@ -50,9 +50,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54479454-3551-4608-8bb3-846199c762d7",
+   "metadata": {},
+   "source": [
+    "Calculate Geographical Centroids for Mountain Area RAC:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d92f9b3a-44f4-4cc0-b219-7b9ac85f4874",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Path to the shapefile\u001b[39;00m\n\u001b[0;32m      4\u001b[0m shapefile_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDanie\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDownloads\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mNorth_Carolina_State_and_County_Boundary_Polygons\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mNorth_Carolina_State_and_County_Boundary_Polygons.shp\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
+     ]
+    }
+   ],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "# Path to the shapefile\n",
+    "shapefile_path = r\"C:\\Users\\Danie\\Downloads\\North_Carolina_State_and_County_Boundary_Polygons\\North_Carolina_State_and_County_Boundary_Polygons.shp\"\n",
+    "\n",
+    "# Read the shapefile\n",
+    "counties = gpd.read_file(shapefile_path)\n",
+    "\n",
+    "# List of counties in the \"Mountain Area Trauma Regional Advisory Committee\"\n",
+    "mountain_counties = [\n",
+    "    'Madison', 'Yancey', 'Mitchell', 'Avery',\n",
+    "    'Buncombe', 'Haywood', 'Henderson', 'Swain',\n",
+    "    'Jackson', 'Macon', 'Graham', 'Cherokee',\n",
+    "    'Clay', 'Transylvania', 'McDowell', 'Rutherford',\n",
+    "    'Polk', 'Burke'\n",
+    "]\n",
+    "\n",
+    "# Filter for the counties of interest\n",
+    "mountain_counties_gdf = counties[counties['County Name'].isin(mountain_counties)]\n",
+    "\n",
+    "# Calculate the centroids\n",
+    "mountain_counties_gdf['centroid'] = mountain_counties_gdf.geometry.centroid\n",
+    "\n",
+    "# Extract the centroid coordinates\n",
+    "mountain_counties_gdf['centroid_x'] = mountain_counties_gdf.centroid.x\n",
+    "mountain_counties_gdf['centroid_y'] = mountain_counties_gdf.centroid.y\n",
+    "\n",
+    "# Print out the results\n",
+    "for index, row in mountain_counties_gdf.iterrows():\n",
+    "    print(f\"{row['NAME']} County centroid: ({row['centroid_x']}, {row['centroid_y']})\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba26ea9-1708-4075-85bf-687f437b5e69",
+   "id": "3bc76eec-b242-4bc8-b503-76ec1a141590",
    "metadata": {},
    "outputs": [],
    "source": []
